--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 bcrypt==4.3.0
 blinker==1.9.0
 click==8.2.1
+dnspython==2.7.0
 dominate==2.9.1
+email_validator==2.2.0
 Flask==3.1.1
 Flask-Bootstrap==3.3.7.1
 Flask-JWT-Extended==4.7.1
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
 greenlet==3.2.2
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
@@ -16,3 +20,4 @@ SQLAlchemy==2.0.41
 typing_extensions==4.13.2
 visitor==0.1.3
 Werkzeug==3.1.3
+WTForms==3.2.1
