--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 bcrypt==4.3.0
 blinker==1.9.0
 click==8.2.1
+contourpy==1.3.2
+cycler==0.12.1
 dnspython==2.7.0
 dominate==2.9.1
 email_validator==2.2.0
@@ -9,13 +11,22 @@ Flask-Bootstrap==3.3.7.1
 Flask-JWT-Extended==4.7.1
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
+fonttools==4.58.5
 greenlet==3.2.2
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+kiwisolver==1.4.8
 MarkupSafe==3.0.2
+matplotlib==3.10.3
+numpy==2.3.1
+packaging==25.0
+pillow==11.3.0
 PyJWT==2.10.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+six==1.17.0
 SQLAlchemy==2.0.41
 typing_extensions==4.13.2
 visitor==0.1.3
